syntax = "proto3";

option csharp_namespace = "eShopLearning.Products.ApplicationGrpcRemoteServices.Protos";

service SkuInfoGrpc{
	rpc GetSkuInfoAsId(GetSkuInfoAsIdRequest) returns (GetSkuInfoAsIdReply);
	rpc GetSkuBasikInfoAsId(GetSkuBasikInfoAsIdRequest) returns (GetSkuBasikInfoAsIdReply);
	rpc Search(SearchRequest) returns (stream SearchReply);
}

message GetSkuInfoAsIdRequest{
	string skuId = 1;
}

message GetSkuInfoAsIdReply{
	string title = 1;
	string rotatePictures = 2;
	string detailContent = 3;
	float price = 4;
	int32 inventory = 5;
	SkuAttrInfo skuAttrInfo = 6;	
}

/*message SkuBasicsInfo{
	string title = 1;
	string rotatePictures = 2;
	string detailContent = 3;
	float price = 4;
	int32 inventory = 5;
}*/

message SkuAttrInfo{
	string type = 1;
	string name = 2;
	string image = 3;
}


/** Search **/
message SearchRequest{
	string keyword = 1;
	int32 page = 2;
	int32 size = 3;
}
message SearchReply{
	string skuId =1;
	string image = 2;
	string title = 3;
	float price = 4;
}


/** GetSkuBasikInfoAsId **/
message GetSkuBasikInfoAsIdRequest{
	string skuId = 1;
}
message GetSkuBasikInfoAsIdReply{
	string title = 1;
	float price = 2;
	int32 inventory = 3;
	string image = 4;
	string skuAttrs = 5;
}